--- a/css/index.css
+++ b/css/index.css
@@ -10,20 +10,27 @@ body {
 }
 .topBox{
     position: relative;
-    height: 400px;
+    height: 500px;
 }
 .topTextBox{
     position: relative;
     float: left;
-    height: 400px;
+    height: 450px;
+    margin-left: 400px;
 }
 .pictureBox{
     position: relative;
     top:27px;   
     left:106px; 
     padding: 20px;
-    width: 52%;
+    width: 400px;
+    height: 400px;
     float: left;
+}
+
+img{
+    width: 100%;
+    height: 100%;
 }
 
 .titleText{
@@ -54,7 +61,7 @@ body {
     position: relative;
     top: 30px;
     padding: 10px;
-    width: 41%;
+    width: 50%;
     border-radius: 4px;
     color: #FFFFFF;
     background-color: #0169B2;
